asm_tests/other_testfiles/invalid_files/error42.s
.name "MORO"
.comment "MORJESTA!"


ldi r12, r1, 12
